--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -13,29 +13,44 @@
   <div *ngIf="stage==1">
     <!-- <div class="input-title">이름</div>
     <ion-input class="input-box" placeholder="이름" [(ngModel)]="name" type="text"></ion-input> -->
-    <div style="width: 100%;">
-      <div class="input-title">아이디</div>
-      <ion-input class="input-box" placeholder="성명+생년 (예: 홍길동80) " [(ngModel)]="id" type="text"></ion-input>
+    <div style="width: 100%; height:100px;">
+      <div style="    height: 50px;" class="input-title">아이디</div>
+      <ion-input style="
+      color: white;
+    font-size: 20px;
+      float: right;" class="input-box" placeholder="성명+생년 (예: 홍길동80) " [(ngModel)]="id" type="text"></ion-input>
     </div>
 
-    <div style="width: 100%;">
-      <div class="input-title">비밀번호</div>
-      <ion-input class="input-box" placeholder="비밀번호(6~12자 입력)" [(ngModel)]="password" type="text"></ion-input>
+    <div style="width: 100%; height:100px;">
+      <div style="    height: 50px;" class="input-title">비밀번호</div>
+      <ion-input style="
+      color: white;
+    font-size: 20px;
+      float: right;" class="input-box" placeholder="비밀번호(6~12자 입력)" [(ngModel)]="password" type="text"></ion-input>
     </div>
 
-    <div style="width: 100%;">
-      <div class="input-title">비밀번호 확인</div>
-      <ion-input class="input-box" placeholder="비밀번호(6~12자 입력)" [(ngModel)]="password2" type="text"></ion-input>
+    <div style="width: 100%; height:100px;">
+      <div style="    height: 50px;" class="input-title">비밀번호 확인</div>
+      <ion-input style="
+      color: white;
+    font-size: 20px;
+      float: right;" class="input-box" placeholder="비밀번호(6~12자 입력)" [(ngModel)]="password2" type="text"></ion-input>
     </div>
 
-    <div style="width: 100%;">
-      <div class="input-title">이름</div>
-      <ion-input class="input-box" placeholder="이름을 입력해주세요" [(ngModel)]="name" type="text"></ion-input>
+    <div style="width: 100%; height:100px;">
+      <div style="    height: 50px;" class="input-title">이름</div>
+      <ion-input style="
+      color: white;
+    font-size: 20px;
+      float: right;" class="input-box" placeholder="이름을 입력해주세요" [(ngModel)]="name" type="text"></ion-input>
     </div>
 
-    <div style="width: 100%;">
-      <div class="input-title">휴대전화 번호</div>
-      <ion-input class="input-box" placeholder="휴대전화 번호" [(ngModel)]="phone" type="number"></ion-input>
+    <div style="width: 100%; height:100px;">
+      <div style="    height: 50px;" class="input-title">휴대전화 번호</div>
+      <ion-input style="
+      color: white;
+    font-size: 20px;
+      float: right;" class="input-box" placeholder="휴대전화 번호" [(ngModel)]="phone" type="number"></ion-input>
     </div>
     <!-- <button style="
     min-height: 40px;
@@ -123,6 +138,73 @@
   </div>
 
   <div *ngIf="stage==3">
+
+    <div class="center">
+
+      <span style="
+      color: white;
+      width: 100%;
+      font-size: 20px;
+    display: block;
+      text-align: center;">WAD 를 시작하겠습니다. </span>
+
+    </div>
+
+    <!-- <ion-list>
+      <ion-item>
+        <ion-select   cancelText="Nah" okText="Okay!">
+          <ion-option selected="true" value="선택하세요 " >선택하세요</ion-option>
+          <ion-option *ngFor="let a of young" value="a" >{{a}}</ion-option>
+        </ion-select>
+      </ion-item>
+    </ion-list> -->
+    <div style="
+    margin-top: 100px;">
+
+      <span style="
+      color: white;
+      width: 100%;
+      font-size: 20px;
+      text-align: center;">영업팀을 설정해주세요. </span>
+
+<ion-list style=" 
+margin-top: 20px;">
+  <ion-item>
+    <ion-label>영업팀</ion-label>
+    <ion-select [(ngModel)]="youngup">
+      <ion-option *ngFor="let a of young" value="{{a}}">{{a}}</ion-option>
+     
+    </ion-select>
+  </ion-item>
+</ion-list>
+
+
+<span style="
+color: white;
+width: 100%;
+font-size: 20px;
+text-align: center;">조판팀을 설정해주세요. </span>
+<ion-list style="    margin-top: 20px;">
+  <ion-item>
+    <ion-label>조판팀 </ion-label>
+    <ion-select [(ngModel)]="jopanteam">
+      <ion-option *ngFor="let a of jopan" value="{{a}}">{{a}}</ion-option>
+     
+    </ion-select>
+  </ion-item>
+</ion-list>
+    </div>
+
+
+    <button class="paybtn" (click)="gotonext3();">시작하기</button>
+  </div>
+
+  
+
+
+
+  <div *ngIf="stage==4">
+   
     <div class="input-title2"><span style="font-size:30px;" >환영합니다. <br></span>
       <span style="font-size:30px;">
       선택하신 회사는 {{selectedCompany.name}}입니다.<br> 
@@ -143,23 +225,54 @@
       <button (click)="selecttype(4)" class="newbtn">인포 </button>
     </div>
     <div style="text-align:center;">
-      <button (click)="selecttype(5)" class="newbtn">밴드 </button>
-      <button (click)="selecttype(6)" class="newbtn">관리 </button>
+      <button (click)="selecttype(5)" class="newbtn">주차 </button>
+      <button (click)="selecttype(6)" class="newbtn">밴드 </button>
     </div>
   </div>
 
-
-
-  <div *ngIf="stage==4">
+  <div *ngIf="stage==5">
     <div class="input-title2"><span style="font-size:30px;" >환영합니다. <br></span>
       <span *ngIf="type==1" style="font-size:30px;">
-      아가씨 선택하셨군요 <br> 
+      부장을 선택하셨군요 <br> 
       </span>
       <span *ngIf="type==2" style="font-size:30px;">
         WT 선택하셨군요 <br> 
-        </span>
-      <span style="font-size:30px;"> 
-        희망부서를 선택하세요 
+      </span>
+      <span *ngIf="type==3" style="font-size:30px;">
+        아가씨를 선택하셨군요 <br> 
+        축하합니다! 오늘 {{name}} 님께서는 특별한 담당을 만나셨어요. <br>
+        {{name}} 님이일하실때 <br>
+        필요한 기능들이 많아요!<br>
+        실시간 시간체크, 오늘의 컷수, 일자별 캐린더 등등!
+        <br>
+        <br>
+        <br>
+        WAD오픈 기념 한달 무료
+        <br>
+        한달간 무료로 이용해보시고 마음에<br>
+        안드시면 언제든 탈퇴 가능합니다. .
+
+        <button class="paybtn" (click)="uploadToServer(3);">월 2,100원 결제하기</button>
+        <span>결제하기를 누르면 다음달 이용시 요금이 청구됩니다. </span>
+      </span>
+      <span *ngIf="type==4" style="font-size:30px;">
+        인포를 선택하셨군요 <br> 
+      </span>
+      <span *ngIf="type==5" style="font-size:30px;">
+        주차를 선택하셨군요 <br> 
+        손님을 제일 먼저 맞이하고 제일 마지막까지 모시는  <br>
+        {{name}} 님께 조그마한 도움을 <br>
+        드리고자 WAD가 왔습니다<br>
+        이제 발렛비 등등 요금청구라면 하나도 놓치지 않고 책임질께요! 
+        <br>
+        <br>
+        <br>
+        <br>
+        <button class="paybtn" (click)="uploadToServer(5);">월 2,100원 결제하기</button>
+        <span>결제하기를 누르면 다음달 이용시 요금이 청구됩니다. </span>
+      </span>
+      <span *ngIf="type==6" style="font-size:30px;">
+        관리를 선택하셨군요 <br> 
       </span>
     </div>
 
