--- a/src/pages/loginpage/loginpage.html
+++ b/src/pages/loginpage/loginpage.html
@@ -16,11 +16,11 @@
     <img class="logo" src="assets/img/logo_wad.jpg" />
   
     <div class="pass">
-      <input  style="margin-bottom:5% !important;" class="input-box" placeholder="이름 생년" [(ngModel)]="id" type="text"/>
+      <input  style="margin-bottom:5% !important;" class="input-box" placeholder="아이디를 입력해주세요. " [(ngModel)]="id" type="text"/>
     </div>
     <div class="pass">
       
-    <input class="input-box"  style="margin-bottom: 1%;" placeholder="6~12자 입력" [(ngModel)]="password" type="text"/>
+    <input class="input-box"  style="margin-bottom: 1%;" placeholder="패스워드를 입력해주세요." [(ngModel)]="password" type="password"/>
    </div>
     <!-- <div calss="chk-box" style="margin-top: 1%;"> -->
      
