--- a/src/pages/directorpage/directorpage.html
+++ b/src/pages/directorpage/directorpage.html
@@ -2,65 +2,84 @@
   Generated template for the ParkingPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+  Ionic pages and navigation.  
 -->
-<ion-header>
-  <ion-navbar>
-    <ion-title></ion-title>
-  </ion-navbar>
-</ion-header>
 
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons style=" 
+      position: absolute;
+      left: 0;
+      z-index: 9999;
+      color: white;" start>
+        <button (click)="openclose();" menuToggle ion-button icon-only color="royal">
+          <img style="
+          width: 30px" class="logo" src="assets/img/hamburger.png" />
+        </button>
+      </ion-buttons>
+       
+      <img style="margin-left:50px;" class="logo" src="assets/img/logo_wad.jpg" />
+   
+      <ion-buttons end>
+        <button  style="color:white;"ion-button icon-only color="royal">
+          <ion-icon name="person-add"></ion-icon>
+          <span>{{name}}</span>
+        </button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  <ion-menu [content]="mycontent">
+    <ion-content>
+      <ion-list>
+        <ion-item>주차파트</ion-item>
+      </ion-list>
+      <ion-list>
+        <ion-item>인포파트</ion-item>
+      </ion-list>
+      <ion-list>
+        <ion-item>출근부</ion-item>
+      </ion-list>
+      <ion-list>
+        <ion-item>초이스</ion-item>
+      </ion-list>
+      <ion-list>
+        <ion-item>공지</ion-item>
+      </ion-list>
+      <ion-list>
+        <ion-item>알림</ion-item>
+      </ion-list>
+      <ion-list>
+        <ion-item>누적내역</ion-item>
+      </ion-list>
+      <ion-list>
+        <ion-item>입금내역</ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  
+  <ion-nav #mycontent [root]="rootPage"></ion-nav>
 <ion-content style="
 background: black; margin-top:45px;" padding>
-  <div class="header">
-    <div class="header-parking">
-      <p style="
-      font-size: 24px;
-      text-decoration: underline;" class="header-parking-text">주차</p>
-      <hr class="header-parking-hr">
-    </div>
-    <div class="header-total">
-      <p class="header-total-text">알계: {{totalcount}}건</p>
-      <p class="header-total-text">합계: ₩ {{totalprice.toLocaleString()}}원</p>
-    </div>
+ <div class="header">
+  <div class="header-parking">
+    <button style="
+    float: left;
+    margin-left: 20px;
+    margin-top: 10px;" class="header_btn">입금하실금액 </button>
+
+    <button style="
+    float: right;
+    margin-right: 20px;
+    margin-top: 10px;" class="header_btn">$1,900,000 </button>
   </div>
-  <ion-segment class="ion-segment" value="1" (ionChange)="screenSwitch($event)">
-    <ion-segment-button [ngClass]="activeclass=='1' ? 'segactive' : 'segactiveno'" value="1">
-      <ion-label class="ion-label">주차현황</ion-label>
-    </ion-segment-button>
-    <ion-segment-button [ngClass]="activeclass=='2' ? 'segactive' : 'segactiveno'" value="2">
-      <ion-label class="ion-label">일주차</ion-label>
-    </ion-segment-button>
-    <ion-segment-button [ngClass]="activeclass==3 ? 'segactive' : 'segactiveno'" value="3">
-      <ion-label class="ion-label">월주차</ion-label>
-    </ion-segment-button>
-    <ion-segment-button [ngClass]="activeclass==4 ? 'segactive' : 'segactiveno'" value="4">
-      <ion-label class="ion-label">주차내역</ion-label>
-    </ion-segment-button>
-  </ion-segment>
+</div>
 
-  <div *ngIf="showplus" class="ion-label-area">
-    <div class="box-1" (click)="goToReceiptWrite('1')">
-      <p>발렛</p>
-    </div>
+<hr class="header-parking-hr">
 
-    <div class="box-2" (click)="goToReceiptWrite('2')">
-      <p>대리</p>
-    </div>
+  <!--
+ 
 
-    <div class="box-3" (click)="goToReceiptWrite('3')">
-      <p>픽업</p>
-    </div>
-
-    <div class="box-4" (click)="goToReceiptWrite('4')">
-      <p>일 주차</p>
-    </div>
-
-    <div class="box-5" (click)="goToReceiptWrite('5')">
-      <p>월 주차</p>
-    </div>
-  </div>
-  <div *ngIf="!showplus" class="ion-label-area">
+  <div  class="ion-label-area">
     <div id="ion-label-area-1">
       <div  *ngFor="let i of mainlist; let j = index;">
         <button (click)="extendedAccordion(1, j)" class="accordion" id="accordion-{{i}}">
@@ -121,11 +140,6 @@ background: black; margin-top:45px;" padding>
         <hr style="width: 90%; height: 1px; background-color: white; margin-top: 0px;">
       </div>
     </div>
-  </div>
+  </div> -->
 
-      <ion-fab *ngIf="!showplus" style="
-      right: 10%;
-      bottom: 10%;">
-        <button (click)="goToReceiptPage()" ion-fab>+</button>
-      </ion-fab>
 </ion-content>
