햄버거- 로그아웃 기능추가
햄버거- 로그아웃 기능추가

--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -48,6 +48,10 @@
       <ion-list>
         <ion-item>입금내역</ion-item>
       </ion-list>
+
+      <ion-list>
+        <ion-item (click)="logout();">로그아웃</ion-item>
+      </ion-list>
     </ion-content>
   </ion-menu>
 
