--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -73,14 +73,17 @@
         <span>입실T</span>
         <span>퇴실T</span>
       </div>
-      <div class="datas">
-        <span>126</span>
-        <span>추신수</span>
-        <span>완료</span>
-        <span>2인</span>
-        <span>이수</span>
-        <span>18:00</span>
-        <span>21:00</span>
+      <div (click)="editing(a);" *ngFor="let a of mainlist" class="datas">
+        <span>{{a.room}}</span>
+        <span>{{a.incharge}}</span>
+        <span *ngIf="a.status=='reserved'"> 예약중 </span>
+        <span *ngIf="a.status=='entered'"> 입실 </span>
+        <span *ngIf="a.status=='clean'"> 정리중 </span>
+        <span *ngIf="a.status=='fin'">완료  </span>
+        <span>0 인 </span>
+        <span>{{a.wt}}</span>
+        <span>{{a.insert_date}}</span>
+        <span></span>
       </div>
     </div>
   </div>
@@ -98,7 +101,7 @@
         </div>
       </div>
       <div class="chart-datas">
-        <span>101</span>
+        <span (click)="addRoom(101);">101</span>
         <span>102</span>
         <span>103</span>
         <span>104</span>
