--- a/src/pages/parking/parking.html
+++ b/src/pages/parking/parking.html
@@ -5,23 +5,74 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <ion-title></ion-title>
-  </ion-navbar>
-</ion-header>
+  <ion-toolbar>
+    <ion-buttons style="
+    position: absolute;
+    left: 0;
+    z-index: 9999;
+    ;" start>
+      <button (click)="openclose();" menuToggle ion-button icon-only color="royal">
+        <img style="
+        width: 30px" class="logo" src="assets/img/hamburger.png" />
+      </button>
+    </ion-buttons>
 
+    <img style="margin-left:50px;" class="logo" src="assets/img/logo_wad.jpg" />
+
+    <ion-buttons end>
+      <button  style="color:white;"ion-button icon-only color="royal">
+        <ion-icon name="person-add"></ion-icon>
+        <span>{{name}}</span>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+<ion-menu [content]="mycontent">
+  <ion-content>
+    <ion-list>
+      <ion-item>주차파트</ion-item>
+    </ion-list>
+    <ion-list>
+      <ion-item>인포파트</ion-item>
+    </ion-list>
+    <ion-list>
+      <ion-item>출근부</ion-item>
+    </ion-list>
+    <ion-list>
+      <ion-item>초이스</ion-item>
+    </ion-list>
+    <ion-list>
+      <ion-item>공지</ion-item>
+    </ion-list>
+    <ion-list>
+      <ion-item>알림</ion-item>
+    </ion-list>
+    <ion-list>
+      <ion-item>누적내역</ion-item>
+    </ion-list>
+    <ion-list>
+      <ion-item>입금내역</ion-item>
+    </ion-list>
+
+    <ion-list>
+      <ion-item (click)="logout();">로그아웃</ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-nav #mycontent [root]="rootPage"></ion-nav>
 <ion-content style="
 background: black; margin-top:45px;" padding>
-  <div class="header">
-    <div class="header-parking">
+  <div class="header2">
+    <div class="header-parking2">
       <p style="
       font-size: 24px;
-      text-decoration: underline;" class="header-parking-text">주차</p>
+      text-decoration: underline;" class="header-parking-text2">주차</p>
       <hr class="header-parking-hr">
     </div>
-    <div class="header-total">
-      <p class="header-total-text">알계: {{totalcount}}건</p>
-      <p class="header-total-text">합계: ₩ {{totalprice.toLocaleString()}}원</p>
+    <div class="header-total2">
+      <p class="header-total-text2">알계: {{totalcount}}건</p>
+      <p class="header-total-text2">합계: ₩ {{totalprice.toLocaleString()}}원</p>
     </div>
   </div>
   <ion-segment class="ion-segment" value="1" (ionChange)="screenSwitch($event)">
@@ -63,7 +114,7 @@ background: black; margin-top:45px;" padding>
   <div *ngIf="!showplus" class="ion-label-area">
     <div id="ion-label-area-1">
       <div  *ngFor="let i of mainlist; let j = index;">
-        <button (click)="extendedAccordion(1, j)" class="accordion" id="accordion-{{i}}">
+        <button  ion-long-press [interval]="800"  (pressEnded)="released(i , j)" (click)="extendedAccordion(1, j)" class="accordion" id="accordion-{{i}}">
           <div>
             <p>{{i.date}}</p>
             <p>{{i.time}}</p>
