--- a/src/pages/editingroom/editingroom.html
+++ b/src/pages/editingroom/editingroom.html
@@ -14,8 +14,14 @@ top: 30%;" padding>
           padding: 10px; width: 100%; height:70px;">
             
             <div  class="datas">
-              <span><input   class="input-box"  [(ngModel)]="room" type="text"/></span>
+              <span style="
+              width: 30px;"><input   class="input-box"  [(ngModel)]="room" type="text"/></span>
               <span><input   class="input-box"  [(ngModel)]="incharge" type="text"/></span>
+              <span (click)="clicking(1);" class="newspan" *ngIf="status=='reserved'" > 예약중 </span>
+              <span (click)="clicking(2);" class="newspan" *ngIf="status=='entered'" > 입실 </span>
+              <span (click)="clicking(3);" class="newspan" *ngIf="status=='clean'" > 정리중 </span>
+              <span (click)="clicking(4);" class="newspan" *ngIf="status=='fin'" > 종료 </span>
+              
               <span><input   class="input-box" placeholder="인원"  [(ngModel)]="numofpeople" type="text"/> </span>
               <span><input   class="input-box"  [(ngModel)]="wt" type="text"/></span>
               <span><input   class="input-box"  [(ngModel)]="insert_date" type="text"/></span>
