--- a/src/pages/infomodal/infomodal.html
+++ b/src/pages/infomodal/infomodal.html
@@ -68,6 +68,7 @@ top: 30%;" padding>
           </div>
           <!-- <button class="btn" (click)="takeVideo()" ion-button>동영상</button> -->
         <button class="btn" ion-button (click)="confirm()">저장</button>
+        <button class="btn" ion-button (click)="cancel()">취소</button>
       </div>
 
 
