--- a/src/pages/agasi/agasi.html
+++ b/src/pages/agasi/agasi.html
@@ -71,14 +71,49 @@
     <ion-segment-button [ngClass]="activeclass=='2' ? 'segactive' : 'segactiveno'" value="2">
       <ion-label class="ion-label">Today</ion-label>
     </ion-segment-button>
-    <ion-segment-button [ngClass]="activeclass==3 ? 'segactive' : 'segactiveno'" value="3">
+    <ion-segment-button [ngClass]="activeclass=='3' ? 'segactive' : 'segactiveno'" value="3">
       <ion-label class="ion-label">초이스</ion-label>
     </ion-segment-button>
   </ion-segment>
 
   <div  class="ion-label-area">
     <div class="area" id="ion-label-area-1">
-      111
+
+      <div class="calendar-main" style="">
+        <ion-row class="calendar-header">
+          <ion-col col-2 (click)="goToLastMonth()">
+            <ion-icon name="arrow-back">
+            </ion-icon>
+          </ion-col>
+
+          <ion-col
+          style="font-size: 18px;" col-8
+          (click)="goToday()">
+            {{currentYear}}년 {{currentMonth}}월
+          </ion-col>
+
+          <ion-col col-2 (click)="goToNextMonth()">
+            <ion-icon name="arrow-forward"></ion-icon>
+          </ion-col>
+        </ion-row>
+
+        <div class="calendar-body">
+          <div class="weeks">
+            <span>일</span>
+            <span>월</span>
+            <span>화</span>
+            <span>수</span>
+            <span>목</span>
+            <span>금</span>
+            <span>토</span>
+          </div>
+          <div class="dates">
+            <span *ngFor="let lastDay of daysInLastMonth" class="last-month" (click)="goToLastMonth()">{{lastDay}}</span>
+            <span (click)="openmodal(day);" *ngFor="let day of daysInThisMonth">{{day}}</span>
+            <span *ngFor="let nextDay of daysInNextMonth" class="last-month" (click)="goToNextMonth()">{{nextDay}}</span>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="area" id="ion-label-area-2">
@@ -91,7 +126,7 @@
           <ion-icon class="square" name="square"></ion-icon>
           <span class="text">룸 현황</span>
         </div>
-    
+
         <div class="chart-div">
           <div class="name-keys">
             <span>이름</span>
