agasiPage 캘린더에 월 이동 기능 추가

--- a/src/pages/agasi/agasi.html
+++ b/src/pages/agasi/agasi.html
@@ -77,7 +77,28 @@
   </ion-segment>
 
   <div  class="ion-label-area">
-    <div class="area" id="ion-label-area-1">
+    <div class="area area1" id="ion-label-area-1">
+
+      <div class="top-bar">
+        <div class="info">
+          <div>▶월간 출근일수: </div>
+          <div>■ 누적TC: ￦ </div>
+        </div>
+        <div class="months">
+          <span [ngClass]="currentMonth==1 ? 'active' : ''" (click)="set_month(1)">1월</span>
+          <span [ngClass]="currentMonth==2 ? 'active' : ''" (click)="set_month(2)">2월</span>
+          <span [ngClass]="currentMonth==3 ? 'active' : ''" (click)="set_month(3)">3월</span>
+          <span [ngClass]="currentMonth==4 ? 'active' : ''" (click)="set_month(4)">4월</span>
+          <span [ngClass]="currentMonth==5 ? 'active' : ''" (click)="set_month(5)">5월</span>
+          <span [ngClass]="currentMonth==6 ? 'active' : ''" (click)="set_month(6)">6월</span>
+          <span [ngClass]="currentMonth==7 ? 'active' : ''" (click)="set_month(7)">7월</span>
+          <span [ngClass]="currentMonth==8 ? 'active' : ''" (click)="set_month(8)">8월</span>
+          <span [ngClass]="currentMonth==9 ? 'active' : ''" (click)="set_month(9)">9월</span>
+          <span [ngClass]="currentMonth==10 ? 'active' : ''" (click)="set_month(10)">10월</span>
+          <span [ngClass]="currentMonth==11 ? 'active' : ''" (click)="set_month(11)">11월</span>
+          <span [ngClass]="currentMonth==12 ? 'active' : ''" (click)="set_month(12)">12월</span>
+        </div>
+      </div>
 
       <div class="calendar-main" style="">
         <ion-row class="calendar-header">
