--- a/src/pages/directorpage/directorpage.html
+++ b/src/pages/directorpage/directorpage.html
@@ -30,20 +30,20 @@
   </ion-header>
   <ion-menu [content]="mycontent">
     <ion-content>
-      <ion-list>
+      <ion-list (click)="gotolink(1)">
         <ion-item>주차파트</ion-item>
       </ion-list>
-      <ion-list>
+      <ion-list (click)="gotolink(2)">
         <ion-item>인포파트</ion-item>
       </ion-list>
-      <ion-list>
+      <ion-list (click)="gotolink(3)">
         <ion-item>출근부</ion-item>
       </ion-list>
-      <ion-list>
+      <ion-list (click)="gotolink(4)">
         <ion-item>초이스</ion-item>
       </ion-list>
       <ion-list>
-        <ion-item>공지</ion-item>
+        <ion-item (click)="gotolink(5)">공지</ion-item>
       </ion-list>
       <ion-list>
         <ion-item>알림</ion-item>
