--- a/src/pages/infomodal/infomodal.html
+++ b/src/pages/infomodal/infomodal.html
@@ -36,7 +36,7 @@ top: 30%;" padding>
             float: left;
     line-height: 50px;
     font-size: 24px;
-            background: brown;" class="input-title">인</div>
+            background: brown;" class="input-title">인원</div>
             <ion-input style="
             
     color: white;
@@ -45,7 +45,7 @@ top: 30%;" padding>
     width: 150px;
     border: solid 1px;
     background: red;
-    " class="input-box" placeholder=" " [(ngModel)]="in" type="text"></ion-input>
+    " class="input-box" placeholder=" " [(ngModel)]="numofpeople" type="text"></ion-input>
           </div>
 
           <div style="width: 100%; height:70px;">
