--- a/src/pages/ordermain/ordermain.html
+++ b/src/pages/ordermain/ordermain.html
@@ -24,20 +24,20 @@
   </ion-header>
   <ion-menu [content]="mycontent">
     <ion-content>
-      <ion-list (click)="gotolink(1)">
+      <ion-list>
         <ion-item>주차파트</ion-item>
       </ion-list>
-      <ion-list (click)="gotolink(2)">
+      <ion-list>
         <ion-item>인포파트</ion-item>
       </ion-list>
-      <ion-list (click)="gotolink(3)">
+      <ion-list>
         <ion-item>출근부</ion-item>
       </ion-list>
-      <ion-list (click)="gotolink(4)">
+      <ion-list>
         <ion-item>초이스</ion-item>
       </ion-list>
       <ion-list>
-        <ion-item (click)="gotolink(5)">공지</ion-item>
+        <ion-item>공지</ion-item>
       </ion-list>
       <ion-list>
         <ion-item>알림</ion-item>
