--- a/src/pages/editingroom/editingroom.html
+++ b/src/pages/editingroom/editingroom.html
@@ -20,12 +20,12 @@ top: 30%;" padding>
               <span (click)="clicking(1);" class="newspan" *ngIf="status=='reserved'" > 예약중 </span>
               <span (click)="clicking(2);" class="newspan" *ngIf="status=='entered'" > 입실 </span>
               <span (click)="clicking(3);" class="newspan" *ngIf="status=='clean'" > 정리중 </span>
-              <span (click)="clicking(4);" class="newspan" *ngIf="status=='fin'" > 종료 </span>
+              <!-- <span (click)="clicking(4);" class="newspan" *ngIf="status=='fin'" > 종료 </span> -->
               
               <span><input   class="input-box" placeholder="인원"  [(ngModel)]="numofpeople" type="text"/> </span>
               <span><input   class="input-box"  [(ngModel)]="wt" type="text"/></span>
               <span><input   class="input-box"  [(ngModel)]="insert_date" type="text"/></span>
-              <span><input   class="input-box" placeholder="퇴실" [(ngModel)]="end_date" type="text"/> </span>
+              <!-- <span><input   class="input-box" placeholder="퇴실" [(ngModel)]="end_date" type="text"/> </span> -->
             </div>
           </div>
 
