--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -12,7 +12,6 @@
 <!-- ion header with black background  -->
 <ion-header>
   <ion-navbar color="black">
-    <ion-title>order</ion-title>
   </ion-navbar>
 </ion-header>
 <!-- ion-content with padding -->
@@ -22,9 +21,9 @@
 
     <button ion-button (click)="neworder();" class="newbtn">신규 주문</button>
  
-    <button ion-button class="newbtn">추가 주문</button>
+    <button ion-button (click)="moreorder();" class="newbtn">추가 주문</button>
    
-    <button ion-button class="newbtn">주문 취소 </button>
+    <button ion-button (click)="cancelorder();"  class="newbtn">주문 취소 </button>
   </div>
  
 </ion-content>
